Update RahaTVBrowser to 0.3.0